crates/orator-core/tests/snapshots/codegen_types__prefix_items.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Prefix Items | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
/// Two-integer (x, y) coordinate.
pub type Coordinate = (i32, i32);
/// Inclusive start/end date range.
pub type DateRange = (orator_axum::chrono::NaiveDate, orator_axum::chrono::NaiveDate);
/// A labelled position; exercises inline prefixItems on a struct property.
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Marker {
    pub label: String,
    pub position: (f64, f64),
}
/// Exercises a tuple as a oneOf variant.
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(untagged)]
pub enum PointOrLabel {
    TupleF64f64((f64, f64)),
    String(String),
}
/// 8-bit RGB triple.
pub type Rgb = (i32, i32, i32);
