crates/orator-core/tests/snapshots/codegen_types__recursive_types.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.7.0
// Do not edit manually.
// Recursive schemas test | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct CycleA {
    pub b: Box<CycleB>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct CycleB {
    pub a: Box<CycleA>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct ListNode {
    pub next: Box<ListNode>,
    pub value: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct OptionalSelfRef {
    pub id: i64,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub parent: Option<OptionalSelfRef>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct TreeNode {
    pub children: Vec<TreeNode>,
    pub name: String,
}
