crates/orator-core/tests/snapshots/codegen_types__uuid.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// UUID Test | v1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Resource {
    pub id: orator_axum::uuid::Uuid,
    pub name: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub parent_id: Option<orator_axum::uuid::Uuid>,
}
pub type ResourceId = orator_axum::uuid::Uuid;
